--- a/Vision_Pharmacy/Code/Resources_Ar.resx
+++ b/Vision_Pharmacy/Code/Resources_Ar.resx
@@ -200,4 +200,7 @@
   <data name="lblTitleCustom" xml:space="preserve">
     <value>قائمة العملاء</value>
   </data>
+  <data name="TitlePurchase" xml:space="preserve">
+    <value>قائمة المشتريات</value>
+  </data>
 </root>
