--- a/Vision_Pharmacy/Code/Resources_Ar.resx
+++ b/Vision_Pharmacy/Code/Resources_Ar.resx
@@ -117,6 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	
+	
   <data name="btnLogin" xml:space="preserve">
     <value>تسجيل الدخول</value>
   </data>
@@ -202,5 +204,103 @@
   </data>
   <data name="TitlePurchase" xml:space="preserve">
     <value>قائمة المشتريات</value>
+  </data>
+  <data name="AddNotificationText" xml:space="preserve">
+    <value>تمت عملية الاضافة بنجاح</value>
+  </data>
+  <data name="DeleteActionCaption" xml:space="preserve">
+    <value>هل انت متأكد من هذا الاجراء. لا يمكن استرجاع البيانات</value>
+  </data>
+  <data name="DeleteActionText" xml:space="preserve">
+    <value>اجراء حذف</value>
+  </data>
+  <data name="DeleteNotificationText" xml:space="preserve">
+    <value>تمت عملية الحذف بنجاح</value>
+  </data>
+  <data name="DeleteOutComeText" xml:space="preserve">
+    <value>اجراء حذف</value>
+  </data>
+	
+	
+	
+	
+	
+  <data name="DeletOutComeCaption" xml:space="preserve">
+    <value>ان عملية الحذف هذه لا تؤثر على المواد ( المواد  المتوفرة). اذا كنت بصدد ازالة المواد ايضا يجب عليك التعديل ثم الازالة</value>
+  </data>
+  <data name="DuplicateDataCaption" xml:space="preserve">
+    <value>بعض البيانات لا يجب ان تتكرر مثل المعرف. تأكد من تغييرة ثم اعد المحاولة</value>
+  </data>
+  <data name="DuplicateDataText" xml:space="preserve">
+    <value>تكرار البيانات</value>
+  </data>
+  <data name="EditNotificationText" xml:space="preserve">
+    <value>تمت عملية التعديل بنجاح</value>
+  </data>
+  <data name="EmptyGridViewCaption" xml:space="preserve">
+    <value>شبكة عرض البيانات فارغة. تأكد من اختيار صف لاتمام العملية</value>
+  </data>
+  <data name="EmptyGridViewText" xml:space="preserve">
+    <value>شبكة عرض البيانات لديك فارغة</value>
+  </data>
+  <data name="FiledsEmptyCaption" xml:space="preserve">
+    <value>الحقول التي تحتوي على علامة * هي مطلوبة. تأكد من ادخالها ثم اعد المحاولة</value>
+  </data>
+  <data name="FiledsEmptyText" xml:space="preserve">
+    <value>بعض الحقول مطلوبة</value>
+  </data>
+  <data name="GeneralText" xml:space="preserve">
+    <value>مخزن</value>
+  </data>
+  <data name="InvalidInputCaption" xml:space="preserve">
+    <value>يرجى ادخال قيمة صحيحة</value>
+  </data>
+  <data name="InvalidIputText" xml:space="preserve">
+    <value>خطأ ادخال</value>
+  </data>
+  <data name="OnDamgeCaption" xml:space="preserve">
+    <value>سيتم نقل المادة الى قسم المواد التالفة</value>
+  </data>
+  <data name="OnDamgeText" xml:space="preserve">
+    <value>اجراء اتلاف</value>
+  </data>
+  <data name="OutOfConscinceCaption" xml:space="preserve">
+    <value>سيتم نقل المادة الى قسم المواد التي خارج الذمة</value>
+  </data>
+  <data name="OutOfConscinceText" xml:space="preserve">
+    <value>نقل خارج الذمة</value>
+  </data>
+  <data name="QuantityMaterialCaption" xml:space="preserve">
+    <value>لا يمكن ان تكون الكمية المضافة اكبر من الكمية المتوفرة, انظر الى الكمية للمادة الحالية وتأكد من انها اكبر او لا تساوي صفر ثم اعد المحاولة</value>
+  </data>
+  <data name="QuantityMaterialText" xml:space="preserve">
+    <value>كمية غير صحيحة</value>
+  </data>
+  <data name="SavedDataCaption" xml:space="preserve">
+    <value>يبدو انك لم تقم بعملية الحفظ ولديك بيانات مضافة. سوف نحتفظ بها ويمكنك الرجوع لها في عملية الاضافة القادمة</value>
+  </data>
+  <data name="SavedDataText" xml:space="preserve">
+    <value>تذكر !</value>
+  </data>
+  <data name="ServerConnectionCaption" xml:space="preserve">
+    <value>يبدو ان لديك مشكلة في في هذه العملية وهذا يعزى الى عده اسباب من بينها علاقة تربط هذه البيانات في بيانات اخرى يجب حذفها اولا او ريما عدم صحة تثبيت السيرفر او صلاحيات الوصول او عدم تثبيت قاعدة البيانات او خطأ في الاتصال في قاعدة البيانات. يمكنك تعديل نص الاتصال في اعدادات النظام او يمكنك الاتصال في مدير النظام لحل المشكلة</value>
+  </data>
+  <data name="ServerConnectionText" xml:space="preserve">
+    <value>خطأ في الاتصال في قاعدة البيانات</value>
+  </data>
+  <data name="ShowDeleteMaterialCaption" xml:space="preserve">
+    <value>ان هذا الاجراء يؤدي الى حذف المادة بشكل كامل من هنا وايضا من المواد</value>
+  </data>
+  <data name="ShowMoveDamgeCaption" xml:space="preserve">
+    <value>تؤدي هذه العملية الى حذف المادة بشكل كامل وسيتم التأثير في المواد </value>
+  </data>
+  <data name="ShowMoveDamgeText" xml:space="preserve">
+    <value>حذف مادة</value>
+  </data>
+  <data name="ShowRowsCaption" xml:space="preserve">
+    <value>لحساسية اجراء الحذف لابد لك ان تقوم بأختيار كامل السطر, واذا اردت حذف كامل البيانات يمكنك الضغط CTRL+A</value>
+  </data>
+  <data name="ShowRowText" xml:space="preserve">
+    <value>تأكد من اختيار كامل السطر لحذفة</value>
   </data>
 </root>
